--- a/www/css/app.css
+++ b/www/css/app.css
@@ -18,7 +18,7 @@ padding:8px;
 .orange-header
 {
 max-width:100%;
-background:#f75d34;
+background:#192630;
 color:#fff;
 padding-top:10px;
 padding-bottom:15px;
